feat: 队列重试/死信、熔断器 Redis 化、接口限流、antd 按需引入、健康聚合
修复：
- Redis command timed out：客户端超时 2s→6s（大于队列 XREAD BLOCK 5s）
- 解析超时 10 分钟→30 分钟/块（MAX_POLL_TIMES 300→900）

可靠性：
- 熔断器状态 Redis 化（重启/多实例共享，Redis 不可用自动降级为不熔断）
- 文档队列：同步解析 + 失败自动重试（指数退避≤3 次）+ 死信队列，失败前清理 LightRAG 记录避免内容去重拦截

安全：
- 登录/注册（10 次/分）、问答接口（20 次/分）按 IP 限流（Redis 计数器）

前端：
- ant-design-vue 全局注册改为按需引入（server entry 2.88MB→114KB，总包 9.7→8.56MB）
- 文档管理新增解析队列可视化（待处理/处理中/死信）

可观测性：
- /api/health 聚合 Redis/MySQL/LightRAG 状态 + 队列统计